# license-token-validation

./: LICENSE  README.md  pyproject.toml
docker/: Dockerfile  entrypoint.sh
src/token_val/: crypt.py  exceptions.py  io.py  xml_rpc.py
tests/: test_crypt.py  test_token_validate.py
token_val/: client_cli.py  crypt.py  environment.py  key_gen.py  server.py  token_validate.py  version.py
